--- a/sgdc/market/index.html
+++ b/sgdc/market/index.html
@@ -12,8 +12,6 @@
 }
 *{box-sizing:border-box}
 body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(1200px 600px at 10% -10%,#14183d 0,#0E1023 60%);color:var(--text)}
-
-/* Topbar */
 .nav{max-width:1200px;margin:0 auto;padding:12px 16px;display:flex;align-items:center;gap:10px}
 .back{border:1px solid var(--border);background:#ffffff14;padding:8px 12px;border-radius:12px;text-decoration:none;color:var(--text);font-weight:600;transition:.2s}
 .back:hover{background:#ffffff28}
@@ -21,16 +19,12 @@ body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(
 .balance{font-weight:800;color:var(--good);transition:color .5s}
 .help{cursor:pointer;font-weight:800;border:1px solid var(--border);background:#ffffff14;padding:8px 12px;border-radius:12px;transition:.2s}
 .help:hover{background:#ffffff28}
-
-/* Boxes */
 .container{max-width:1200px;margin:0 auto;padding:22px 16px 64px}
 .summary{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
 .box{background:linear-gradient(180deg,var(--panel),#111431);border:1px solid var(--border);border-radius:18px;padding:16px;box-shadow:var(--shadow);transition:transform .3s}
 .box.highlight{outline:2px solid #8a7cff;transform:scale(1.05)}
 .label{font-size:12px;color:var(--muted);text-transform:uppercase;letter-spacing:.08em}
 .value{margin-top:6px;font-weight:800;font-size:22px}
-
-/* Coins grid */
 .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:18px;margin-top:18px}
 .card{background:linear-gradient(180deg,var(--card),#101432);border:1px solid var(--border);border-radius:18px;padding:14px;box-shadow:var(--shadow);text-decoration:none;color:var(--text);display:block;transition:transform .2s, border-color .2s}
 .card:hover{transform:translateY(-4px) scale(1.02);border-color:#ffffff2e}
@@ -42,8 +36,6 @@ body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(
 .pill.down{color:var(--bad);animation:pulseDown 1s}
 @keyframes pulseUp{0%{background:#4BD37B44}100%{background:#ffffff1a}}
 @keyframes pulseDown{0%{background:#FF6B6B44}100%{background:#ffffff1a}}
-
-/* Onboarding overlay */
 #onboard{position:fixed;inset:0;background:rgba(0,0,0,.8);display:flex;align-items:center;justify-content:center;z-index:9999}
 .on-card{background:#15193A;border-radius:20px;padding:24px;max-width:500px;width:90%;color:var(--text);box-shadow:var(--shadow);text-align:center;animation:fadeIn .4s}
 .on-card h2{margin:0 0 12px;font-size:22px}
@@ -66,13 +58,12 @@ body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(
   <main class="container">
     <div class="summary">
       <div class="box" id="boxWallet"><div class="label">Wallet</div><div class="value"><span id="bitsWallet">0</span> Bits</div></div>
-      <div class="box" id="boxInvested"><div class="label">Geïnvesteerd</div><div class="value"><span id="bitsInvested">0</span></div></div>
+      <div class="box" id="boxInvested"><div class="label">Geïnvesteerd</div><div class="value"><span id="bitsInvested">₿0.00</span></div></div>
       <div class="box" id="boxMarket"><div class="label">Markt vs gisteren</div><div class="value"><span id="marketDelta">0.00%</span></div></div>
     </div>
     <section class="grid" id="assetGrid"></section>
   </main>
 
-  <!-- Onboarding overlay -->
   <div id="onboard" style="display:none">
     <div class="on-card">
       <h2 id="onTitle">Welkom bij SGDC Market</h2>
@@ -85,49 +76,127 @@ body{margin:0;font-family:Inter,system-ui,sans-serif;background:radial-gradient(
   </div>
 
 <script>
-/* --- Bits API --- */
+/* --- Bits (decimals) --- */
 const STORAGE_KEY='sgdc.bits';
-let balance=Number.parseInt(localStorage.getItem(STORAGE_KEY)??'100',10);
-if(Number.isNaN(balance)) balance=100;
-function renderBits(){document.getElementById('bitsHeader').textContent=balance;document.getElementById('bitsWallet').textContent=balance;}
-function setBits(v){balance=Math.max(0,Number(v)||0);localStorage.setItem(STORAGE_KEY,balance);renderBits();}
-window.sgdcBits={get:()=>balance,set:setBits,add:(a)=>setBits(balance+Number(a||0)),reset:()=>{localStorage.removeItem(STORAGE_KEY);setBits(100);},key:STORAGE_KEY};
+let balance=parseFloat(localStorage.getItem(STORAGE_KEY)??'100');
+if(!Number.isFinite(balance)) balance=100;
+function renderBits(){
+  document.getElementById('bitsHeader').textContent=balance.toFixed(2);
+  document.getElementById('bitsWallet').textContent=balance.toFixed(2);
+}
+function setBits(v){balance=Math.max(0,Number(v)||0);localStorage.setItem(STORAGE_KEY,String(balance));renderBits();}
+window.sgdcBits={get:()=>balance,set:setBits,add:(a)=>setBits(balance+Number(a||0)),reset:()=>{localStorage.removeItem(STORAGE_KEY);setBits(100);}};
 renderBits();
 
-/* --- Assets --- */
-const assets=[
- {sym:"SNK",name:"Snacko",icon:"🍪",price:95,yClose:90},
- {sym:"FRIK",name:"Frikandelium",icon:"🌭",price:42,yClose:45},
- {sym:"COKE",name:"ColaCap",icon:"🥤",price:60,yClose:62},
- {sym:"BBIT",name:"Bitterbit",icon:"🟤",price:33,yClose:31},
- {sym:"HWK",name:"HwCoin",icon:"📚",price:25,yClose:26},
- {sym:"TCH",name:"TeachToken",icon:"👩‍🏫",price:70,yClose:72},
- {sym:"WIFI",name:"LaggyFi",icon:"📶",price:15,yClose:14},
- {sym:"CHAIR",name:"ChairChain",icon:"🪑",price:8,yClose:9},
- {sym:"CHZB",name:"CheezeBread",icon:"🧀",price:12,yClose:11},
- {sym:"PPLX",name:"PartyPlex",icon:"🎉",price:140,yClose:130}
-];
+/* --- Shared market model (same as asset.html) --- */
+const assetsKey='market.assets', histPrefix='market.history.', lastKey='sgdc.market.last', portfolioKey='portfolio';
+const Meta={
+  SNK:{name:"Snacko",icon:"🍪",vol:.006,seed:95},
+  FRIK:{name:"Frikandelium",icon:"🌭",vol:.010,seed:42},
+  COKE:{name:"ColaCap",icon:"🥤",vol:.009,seed:60},
+  BBIT:{name:"Bitterbit",icon:"🟤",vol:.007,seed:33},
+  HWK:{name:"HwCoin",icon:"📚",vol:.004,seed:25},
+  TCH:{name:"TeachToken",icon:"👩‍🏫",vol:.008,seed:70},
+  WIFI:{name:"LaggyFi",icon:"📶",vol:.012,seed:15},
+  CHAIR:{name:"ChairChain",icon:"🪑",vol:.005,seed:8},
+  CHZB:{name:"CheezeBread",icon:"🧀",vol:.003,seed:12},
+  PPLX:{name:"PartyPlex",icon:"🎉",vol:.015,seed:140},
+};
+const Symbols=Object.keys(Meta);
+function Hhist(s){return histPrefix+s}
+function portfolio(){ return JSON.parse(localStorage.getItem(portfolioKey)||'{}'); }
+
+function ensureSeed(){
+  let A=JSON.parse(localStorage.getItem(assetsKey)||'null');
+  if(A) return A;
+  A={}; Symbols.forEach(k=>{
+    const m=Meta[k], p0=m.seed, yClose=+(p0*(1+(Math.random()*2-1)*0.02)).toFixed(2);
+    A[k]={price:p0,vol:m.vol,yClose};
+    const N=720; const arr=[]; let p=p0;
+    for(let i=0;i<N;i++){
+      const r=(Math.random()*2-1)*(m.vol*0.9), th=0.02;
+      p=p*(1+r)+th*(p0-p);
+      p=Math.max(1,+p.toFixed(2)); arr.push(p);
+    }
+    localStorage.setItem(Hhist(k), JSON.stringify(arr));
+  });
+  localStorage.setItem(assetsKey, JSON.stringify(A));
+  localStorage.setItem(lastKey, String(Date.now()));
+  return A;
+}
+let Assets=ensureSeed();
+
+/* Offline catch-up */
+const TICK_MS=2000;
+function stepOnce(A){
+  Symbols.forEach(k=>{
+    const a=A[k];
+    let p=a.price*(1+(Math.random()*2-1)*a.vol*0.3);
+    p=Math.max(1,+p.toFixed(2));
+    a.price=p;
+    const hk=Hhist(k);
+    const hist=JSON.parse(localStorage.getItem(hk)||'[]');
+    hist.push(p); if(hist.length>3000) hist.shift();
+    localStorage.setItem(hk, JSON.stringify(hist));
+  });
+  localStorage.setItem(assetsKey, JSON.stringify(A));
+}
+function catchUp(){
+  const last = parseInt(localStorage.getItem(lastKey)||String(Date.now()),10);
+  const elapsed = Math.max(0, Date.now()-last);
+  let steps = Math.floor(elapsed / TICK_MS);
+  if(steps<=0) return;
+  const MAX_STEPS=5000;
+  steps=Math.min(steps, MAX_STEPS);
+  let A=JSON.parse(localStorage.getItem(assetsKey));
+  for(let i=0;i<steps;i++) stepOnce(A);
+  localStorage.setItem(lastKey, String(Date.now()));
+  Assets=JSON.parse(localStorage.getItem(assetsKey));
+}
+window.addEventListener('visibilitychange', ()=>{
+  if(document.visibilityState==='visible'){ catchUp(); renderAll(); }
+  localStorage.setItem(lastKey, String(Date.now()));
+});
+window.addEventListener('beforeunload', ()=>localStorage.setItem(lastKey, String(Date.now())));
+
+/* Render grid + summary */
 function renderGrid(){
   const wrap=document.getElementById('assetGrid');
-  wrap.innerHTML=assets.map(a=>{
+  wrap.innerHTML=Symbols.map(sym=>{
+    const a=Assets[sym], meta=Meta[sym];
     const pct=((a.price-a.yClose)/a.yClose*100).toFixed(2);
-    return `<a class="card" href="./asset.html?symbol=${a.sym}">
+    return `<a class="card" href="./asset.html?symbol=${sym}">
       <div class="row">
         <div style="display:flex;gap:10px;align-items:center">
-          <div class="pill">${a.icon}</div>
-          <div><div class="name">${a.name}</div><div class="ticker">${a.sym}</div></div>
+          <div class="pill">${meta.icon}</div>
+          <div><div class="name">${meta.name}</div><div class="ticker">${sym}</div></div>
         </div>
         <div style="text-align:right">
-          <div class="name">₿${a.price}</div>
+          <div class="name">₿${a.price.toFixed(2)}</div>
           <div class="pill ${pct>=0?'up':'down'}">${pct>=0?'+':''}${pct}%</div>
         </div>
       </div>
     </a>`;
   }).join('');
 }
-renderGrid();
+function renderSummary(){
+  // invested = som (qty * price)
+  const pf = portfolio();
+  let invested = 0;
+  for(const s of Object.keys(pf)){ invested += (pf[s].qty||0) * (Assets[s]?.price||0); }
+  document.getElementById('bitsInvested').textContent = '₿'+invested.toFixed(2);
 
-/* --- Onboarding --- */
+  // market vs gisteren (gemiddelde delta van alle coins)
+  const deltas = Symbols.map(s=>{
+    const a=Assets[s];
+    return ((a.price - a.yClose)/a.yClose)*100;
+  });
+  const avg = deltas.reduce((a,b)=>a+b,0)/deltas.length;
+  document.getElementById('marketDelta').textContent = (avg>=0?'+':'')+avg.toFixed(2)+'%';
+}
+function renderAll(){ renderBits(); renderSummary(); renderGrid(); }
+
+/* Onboarding */
 const steps=[
  {t:"Welkom bij SGDC Market",x:"Hier gebruik je je Bits om te investeren in grappige coins."},
  {t:"Je Wallet",x:"Hierboven zie je hoeveel Bits je hebt.",h:"#boxWallet"},
@@ -142,11 +211,10 @@ const onTitle=document.getElementById('onTitle');
 const onText=document.getElementById('onText');
 const onPrev=document.getElementById('onPrev');
 const onNext=document.getElementById('onNext');
-
-function clearHighlights(){document.querySelectorAll('.highlight').forEach(el=>el.classList.remove('highlight'));}
+function clearHighlights(){document.querySelectorAll('.box.highlight').forEach(el=>el.classList.remove('highlight'));}
 function showStep(i){
-  step=i;clearHighlights();
-  onTitle.textContent=steps[i].t;onText.textContent=steps[i].x;
+  step=i; clearHighlights();
+  onTitle.textContent=steps[i].t; onText.textContent=steps[i].x;
   if(steps[i].h){const el=document.querySelector(steps[i].h);if(el)el.classList.add('highlight');}
   onPrev.style.display=i>0?'inline-block':'none';
   onNext.textContent=i===steps.length-1?'Start!':'Volgende';
@@ -155,6 +223,21 @@ onPrev.onclick=()=>showStep(step-1);
 onNext.onclick=()=>{if(step<steps.length-1)showStep(step+1);else{onboard.style.display='none';clearHighlights();localStorage.setItem('sgdc.market.onboarded','1');}};
 document.getElementById('helpBtn').onclick=()=>{onboard.style.display='flex';showStep(0);};
 if(!localStorage.getItem('sgdc.market.onboarded')){onboard.style.display='flex';showStep(0);}
+
+/* Boot */
+function boot(){
+  catchUp();                    // <<< offline fast-forward
+  renderAll();
+  setInterval(()=>{             // foreground live
+    if(document.visibilityState==='visible'){
+      stepOnce(Assets);
+      localStorage.setItem(lastKey, String(Date.now()));
+      Assets=JSON.parse(localStorage.getItem(assetsKey));
+      renderAll();
+    }
+  }, TICK_MS);
+}
+boot();
 </script>
 </body>
 </html>
