--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -68,11 +68,8 @@
     .soon .pill{background:rgba(255,255,255,.06);color:#c9c9ff}
     .soon{opacity:.6;pointer-events:none}
 
-    /* Footer hint */
     .hint{color:var(--muted); margin-top:16px; font-size:.92rem}
 
-    /* Bits ticker badge ( +X Bits popup ) */
-    .bits-ticker{display:inline-flex;align-items:center;gap:8px}
     .bits-anim{
       font-weight:800; padding:2px 8px; border-radius:999px; font-size:.85rem;
       background:rgba(80,232,194,.14); border:1px solid rgba(80,232,194,.35);
@@ -80,7 +77,7 @@
     }
     .bits-anim.show{opacity:1; transform:translateY(-3px)}
 
-    /* --- Streak Modal Styles --- */
+    /* Streak Modal */
     #streakModal{position:fixed;inset:0;display:none;z-index:80}
     #streakModal.show{display:block}
     .streak-backdrop{position:absolute;inset:0;background:rgba(10,12,28,.6);backdrop-filter:blur(6px)}
@@ -114,7 +111,7 @@
   </style>
 </head>
 <body>
-  <!-- Bits -->
+  <!-- Bits store -->
   <script src="js/bits.js"></script>
 
   <!-- Topbar -->
@@ -167,17 +164,202 @@
     </div>
   </div>
 
-  <!-- scripts van bits + streak (blijven hetzelfde als je huidige index) -->
-  <script src="js/bits.js"></script>
+  <!-- ===== Bits header koppelen + smooth oplopen en +X badge ===== -->
   <script>
-    // ... je bestaande streak/bit scripts hier (heb ik niet ingekort, blijven gelijk)
+    (function(){
+      const bitsSpan = document.getElementById('bitsValue');
+      const badge = document.getElementById('bitsDelta');
+      if (!bitsSpan || !badge) return;
+
+      let raf;
+      function lerp(a,b,t){ return a + (b-a)*t; }
+      function animateTo(target, ms=650){
+        cancelAnimationFrame(raf);
+        const startVal = Number(bitsSpan.textContent||'0');
+        const start = performance.now();
+        (function frame(t){
+          const k = Math.min(1, (t-start)/ms);
+          const eased = k<.5 ? 2*k*k : -1+(4-2*k)*k; // easeInOutQuad
+          const v = Math.round(lerp(startVal, target, eased));
+          bitsSpan.textContent = v;
+          if (k<1) raf = requestAnimationFrame(frame);
+        })(performance.now());
+      }
+      function flashPlus(amount){
+        if (amount<=0) return;
+        badge.textContent = `+${amount} Bits`;
+        badge.classList.add('show');
+        setTimeout(()=>badge.classList.remove('show'), 1400);
+      }
+      try{
+        Bits.onChange(v => animateTo(v, 650));
+        window.__bitsFlash = flashPlus;
+      }catch(e){ console.warn('Bits.onChange niet beschikbaar', e); }
+    })();
+  </script>
+
+  <!-- ===== Streak + beloningsengine + confetti + header-badge ===== -->
+  <script>
+    (function(){
+      const LS_STREAK='sgdc.streak';
+      const LS_LAST='sgdc.streak.lastDate';
+      const LS_LAST_COIN='sgdc.market.lastCoin';
+      const LS_MARKET_VISIT='sgdc.market.visitDate';
+      const tz='Europe/Amsterdam';
+
+      const fmt = new Intl.DateTimeFormat('nl-NL',{timeZone:tz,year:'numeric',month:'2-digit',day:'2-digit'});
+      const keyOf = (d=new Date())=>{
+        const p = fmt.formatToParts(d).reduce((a,x)=>(a[x.type]=x.value,a),{});
+        return `${p.year}-${p.month}-${p.day}`;
+      };
+      const toMs = k=>{const [y,m,d]=k.split('-').map(Number);return new Date(y,m-1,d).getTime();};
+      const isNext = (prev,now)=> prev!==now && Math.round((toMs(now)-toMs(prev))/86400000)===1;
+
+      const headerStreakVal = document.getElementById('headerStreakVal');
+      function setHeaderStreak(n){ if(headerStreakVal) headerStreakVal.textContent = `x${n}`; }
+
+      const modal = document.getElementById('streakModal');
+      const daysEl = document.getElementById('streakDays');
+      const rewardEl = document.getElementById('streakReward');
+      const noteEl = document.getElementById('streakNote');
+      const closeBtn = document.getElementById('streakClose');
+      const banner = document.getElementById('milestoneBanner');
+      const canvas = document.getElementById('confettiCanvas');
+
+      function startConfetti(canvas, duration=1600, density=80){
+        const ctx = canvas.getContext('2d'),
+              W = canvas.width = canvas.offsetWidth,
+              H = canvas.height = canvas.offsetHeight;
+        const pieces = Array.from({length:density},()=>({
+          x:Math.random()*W,y:-10-Math.random()*H,s:4+Math.random()*6,v:1+Math.random()*2,
+          rot:Math.random()*Math.PI,vr:(Math.random()-.5)*0.2
+        }));
+        let start=null, raf;
+        function frame(ts){
+          if(!start) start = ts;
+          const t = ts-start;
+          ctx.clearRect(0,0,W,H);
+          for(const p of pieces){
+            p.y+=p.v; p.rot+=p.vr;
+            ctx.save(); ctx.translate(p.x,p.y); ctx.rotate(p.rot);
+            ctx.fillStyle = ['#8a7cff','#50e3c2','#f4b73b','#e8ecff'][p.s % 4];
+            ctx.fillRect(-p.s/2,-p.s/2,p.s,p.s);
+            ctx.restore();
+            if(p.y>H+20){p.y=-20;p.x=Math.random()*W;}
+          }
+          if(t<duration){ raf=requestAnimationFrame(frame); }
+        }
+        raf=requestAnimationFrame(frame);
+        setTimeout(()=>cancelAnimationFrame(raf), duration+200);
+      }
+
+      function openModal(days, reward, note, confettiMs=1600, confettiN=80){
+        daysEl.textContent = days;
+        rewardEl.textContent = reward;
+        noteEl.textContent = note || 'Kom morgen terug voor een hogere beloning.';
+        banner.style.display='none';
+        modal.classList.add('show');
+        canvas.width = modal.clientWidth; canvas.height = modal.clientHeight;
+        startConfetti(canvas, confettiMs, confettiN);
+        closeBtn.focus();
+      }
+      function openMilestone(days, reward, label, confettiMs=2600, confettiN=140){
+        openModal(days, reward, label, confettiMs, confettiN);
+        banner.style.display='block';
+      }
+      function closeModal(){ modal.classList.remove('show'); }
+      closeBtn.addEventListener('click', closeModal);
+      modal.addEventListener('click', e=>{ if(e.target===modal||e.target.classList.contains('streak-backdrop')) closeModal(); });
+      document.addEventListener('keydown', e=>{ if(e.key==='Escape'&&modal.classList.contains('show')) closeModal(); });
+
+      function baseBetween1to20(day){
+        const cycleBoost = Math.min(12, Math.floor(((day-1)%7))*2);
+        const rand = Math.floor(Math.random()*4);
+        const base = 5 + cycleBoost + rand;
+        return Math.max(1, Math.min(20, base));
+      }
+      function weeklyBonus(day){ return day%7===0 ? 10 : 0; }
+      function milestoneBonus(day){
+        if(day===30) return 20;
+        if(day===50) return 30;
+        return 0;
+      }
+      function marketBonus(todayKey){
+        const vDate = localStorage.getItem('sgdc.market.visitDate');
+        return (vDate===todayKey) ? 3 : 0;
+      }
+      function computeReward(day, todayKey){
+        if(day===100) return 100;
+        return baseBetween1to20(day) + weeklyBonus(day) + milestoneBonus(day) + marketBonus(todayKey);
+      }
+      function flavorNote(day, todayKey){
+        const coin = localStorage.getItem(LS_LAST_COIN);
+        const bits = [];
+        if(day%7===0) bits.push('🎉 Weekbonus');
+        if(day===30) bits.push('🥇 30-dagen mijlpaal');
+        if(day===50) bits.push('🏅 50-dagen mijlpaal');
+        if(localStorage.getItem(LS_MARKET_VISIT)===todayKey) bits.push('📈 Markt-bonus');
+        if(day===100) return '💯 Dag 100 — Legend status!';
+        const reason = bits.length ? `(${bits.join(' · ')})` : '';
+        if(coin) return `📊 Jij keek vandaag naar ${coin}. ${reason}`.trim();
+        return reason || 'Kom morgen terug voor een hogere beloning.';
+      }
+
+      const todayKey = keyOf();
+      const lastKey = localStorage.getItem(LS_LAST);
+      let streak = parseInt(localStorage.getItem(LS_STREAK)||'0',10);
+      if(Number.isNaN(streak)) streak = 0;
+
+      setHeaderStreak(streak || 0);
+
+      let isNew=false;
+      if(!lastKey){ streak=1; isNew=true; }
+      else if(lastKey===todayKey){ isNew=false; }
+      else if(isNext(lastKey,todayKey)){ streak+=1; isNew=true; }
+      else { streak=1; isNew=true; }
+
+      if(isNew){
+        const reward = computeReward(streak, todayKey);
+        const note = flavorNote(streak, todayKey);
+
+        try{ Bits.add(reward); }catch(e){ console.warn('Bits.add niet beschikbaar', e); }
+        if (window.__bitsFlash) window.__bitsFlash(reward);
+
+        if(streak===100){
+          openMilestone(streak, reward, '💯 Dag 100 — Legend status! 100 Bits geclaimd!', 3600, 200);
+        }else if(streak%7===0 || streak===30 || streak===50){
+          openMilestone(streak, reward, note, 2400, 140);
+        }else{
+          openModal(streak, reward, note, 1600, 90);
+        }
+
+        localStorage.setItem(LS_STREAK, String(streak));
+        localStorage.setItem(LS_LAST, todayKey);
+        setHeaderStreak(streak);
+      } else {
+        setHeaderStreak(streak);
+      }
+    })();
+  </script>
+
+  <!-- Bits header initial value (fallback) -->
+  <script>
+    (function initBitsHeader(){
+      const el = document.getElementById('bitsValue');
+      if(!el) return;
+      try{
+        if (typeof Bits?.get === 'function') {
+          el.textContent = Bits.get();
+        }
+      }catch(e){}
+    })();
   </script>
 
   <!-- ✅ Service worker registreren -->
   <script>
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("/sw.js");
-  }
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("/sw.js");
+    }
   </script>
 </body>
 </html>
